--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@heroui/button": "2.2.9",
     "@heroui/code": "2.2.6",
     "@heroui/dropdown": "2.3.9",
-    "@heroui/image": "^2.2.6",
+    "@heroui/image": "^2.2.10",
     "@heroui/input": "2.4.9",
     "@heroui/kbd": "2.2.6",
     "@heroui/link": "2.2.7",
     "@heroui/navbar": "2.2.8",
+    "@heroui/pagination": "^2.2.14",
     "@heroui/snippet": "2.2.10",
     "@heroui/switch": "2.2.8",
-    "@heroui/system": "2.4.6",
-    "@heroui/theme": "2.4.5",
+    "@heroui/system": "^2.4.12",
+    "@heroui/theme": "^2.4.12",
     "@react-aria/visually-hidden": "3.8.12",
     "@react-types/shared": "3.26.0",
     "@tsparticles/engine": "^3.8.1",
@@ -30,8 +31,10 @@
     "framer-motion": "11.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "6.23.0",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.2.5",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16",
     "tsparticles": "^3.8.1"
